# Roggy

./: README.md  main.py  pyproject.toml
meal_planner/: __init__.py  cli.py  database.py  formatter.py  models.py  pantry.py  planner.py  recipes.py
rogi/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  install.ps1  requirements.txt  start.ps1  stop.ps1
rogi/agents/: __init__.py  conversational_agent.py  digest_agent.py  email_agent.py  ollama_client.py  shopping_agent.py
rogi/backend/: __init__.py  config.py  main.py
rogi/backend/routes/: __init__.py  chat.py  digest.py  email.py  meals.py  memory.py  pantry.py  shopping.py
rogi/database/: __init__.py  models.py  repository.py  schema.py
rogi/docs/: architecture.md  database_schema.md  example_workflows.md  installation.md
rogi/playwright/: __init__.py  base.py
rogi/playwright/supermarkets/: __init__.py  example_supermarket.py
rogi/telegram/: __init__.py  bot.py  handlers.py
rogi/tests/: __init__.py  test_agents.py  test_database.py  test_playwright.py
rogi/workflows/: daily_digest.json  email_processing.json
tests/: __init__.py  test_cli.py  test_database.py  test_formatter.py  test_pantry.py  test_planner.py  test_recipes.py
